# string-enum-rs

./: .rustfmt.toml  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/string-enum/: Cargo.toml
crates/string-enum-derive/: Cargo.toml
crates/string-enum-derive/src/: case.rs  lib.rs  rename.rs
crates/string-enum/src/: error.rs  lib.rs
