# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Brandon LeBlanc <brandon@leblanc.codes>"]
repository = "https://github.com/demosdemon/string-enum-rs"
homepage = "https://github.com/demosdemon/string-enum-rs"
edition = "2021"
publish = false
rust-version = "1.81"

[workspace.lints.rust]
let_underscore_drop = "warn"
# unused_crate_dependencies = "warn"
non_ascii_idents = "deny"

[workspace.lints.clippy]
uninlined_format_args = "warn"
cargo_common_metadata = "warn"
# multiple_crate_versions = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "deny"
unwrap_used = "deny"
