[package]
name = "string-enum"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["dep:string-enum-derive"]

[dependencies]
string-enum-derive = { version = "0.1.0", path = "../string-enum-derive", optional = true }

[dev-dependencies]
serde = { version = "1.0.193", features = ["derive"] }
